[tool.poetry]
name = "kink"
version = "0.6.2"
description = "Dependency injection for python."
authors = [
    "Dawid Kraczkowski <dawid.kraczkowski@gmail.com>"
]
license = "MIT"
readme = "README.md"

keywords = ["kink", "dependency injection"]

homepage = "https://github.com/kodemore/kink"
repository = "https://github.com/kodemore/kink"
documentation = "https://github.com/kodemore/kink"

classifiers = [
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

include = ["kink/py.typed"]

# Requirements
[tool.poetry.dependencies]
python = "^3.7"
typing_extensions = "^3.7.4"


[tool.poetry.dev-dependencies]
black = { version = "^19.3b0", python = "^3.6" }
isort = "^5.7.0"
mypy = "^0.730.0"
pytest = "^5.4.3"
pytest-asyncio = "^0.14.0"
pytest-cov = "^2.5"
requests = "^2.24.0"
starlette = "^0.13.4"

